Prevent page horizontal scroll where there's some <pre> in comments/webmentions

--- a/assets/sass/components/_code.scss
+++ b/assets/sass/components/_code.scss
@@ -1,6 +1,7 @@
 pre {
   margin-left: -0.5em;
   margin-right: -0.5em;
+  overflow-x: scroll;
 }
 
 code,
